--- a/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
+++ b/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
@@ -33,7 +33,7 @@ else
 
     @foreach (var item in Model)
     {
-        <tr>
+        <tr id="id_@item.Id">
             <td>
                 @Html.EditorFor(modelItem => item.Name, new { htmlAttributes = new { @class = "form-control", @readolny = "readonly" } })
             </td>
@@ -109,9 +109,26 @@ else
             })
             ///////////////////////////////////////////////////////
 
-            //
+            //Sortowanie kategorii
+
+            $("table#pages tbody").sortable({
+                items: "tr:not(.home)",
+                placeholder: "ui-state-heighlight",
+                update: function () {
+                    var ids = $("table#pages tbody").sortable("serialize");
+                    var url = "/Admin/Shop/ReorderCategories";
+                    $.post(url, ids, function (data) {
+                    });
+                }
+            })
 
             /////////////////////////////////////////////////////
+
+            //potwierdzenie usuwania kategorii
+
+            $("body").on("click", "a.delete", function () {
+                if (!confirm("Potwierdzasz usuniecie kategorii")) return false;
+            });
         })
 
     </script>
