zmiana nazwy i sortowanie kategori

--- a/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
+++ b/CmsShop/Areas/Admin/Views/Shop/Categories.cshtml
@@ -7,7 +7,7 @@
 <h2>Sklep kategorie</h2>
 
 <div class="new-cat">
-    <input type="text" id="newcatname" />
+    <input type="text" id="newCatName" />
     <p>
         <a href="#" id="newcata">Dodaj nową kategorię</a>
         <span class="ajax-text">
@@ -35,7 +35,8 @@ else
     {
         <tr id="id_@item.Id">
             <td>
-                @Html.EditorFor(modelItem => item.Name, new { htmlAttributes = new { @class = "form-control", @readolny = "readonly" } })
+                <div class="ajaxdivtd"></div>
+                @Html.EditorFor(modelItem => item.Name, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
             </td>
             <td>
                 @Html.ActionLink("Usuń", "DeleteCategory", new { id = item.Id }, new { @class = "delete" })
@@ -58,7 +59,7 @@ else
             * Dodawanie nowej kategorii
             */
             var newCatA = $("a#newcata");
-            var newCatTextInput = $("#newcatname");
+            var newCatTextInput = $("#newCatName");
             var ajaxText = $("span.ajax-text");
             var table = $("table#pages tbody");
             newCatTextInput.keyup(function (e) {
@@ -120,7 +121,7 @@ else
                     $.post(url, ids, function (data) {
                     });
                 }
-            })
+            });
 
             /////////////////////////////////////////////////////
 
@@ -129,7 +130,56 @@ else
             $("body").on("click", "a.delete", function () {
                 if (!confirm("Potwierdzasz usuniecie kategorii")) return false;
             });
-        })
+
+            //Zmiana nazwy kategorii
+
+            var orginalTextBoxValue;
+
+            $("table#pages input.text-box").dblclick(function () {
+                orginalTextBoxValue = $(this).val();
+                $(this).attr("readonly", false);
+            });
+
+            $("table#pages input.text-box").keyup(function (e) {
+                if (e.keyCode == 13) {
+                    $(this).blur();
+                }
+            });
+
+            $("table#pages input.text-box").blur(function () {
+
+                var $this = $(this);
+                var ajaxdiv = $this.parent().find(".ajaxdivtd");
+                var newCatName = $this.val();
+                var id = $this.parent().parent().attr("id").substring(3);
+                var url = "/admin/shop/RenameCategory";
+
+                if (newCatName.length < 2) {
+                    alert("Nazwa kategorii musi mieć conajmniej 2 znaki");
+                    $this.attr("readonly", true);
+                    return false;
+                }
+
+                $.post(url, { newCatName: newCatName, id: id }, function (data) {
+                    var response = data.trim();
+                    if (response == "tytulzajety") {
+                        $this.val(orginalTextBoxValue);
+                        ajaxdiv.html("<span class='alert alert-danger'>Ta kategoria jest zajęty!</span>").show();
+                    } else {
+                        ajaxdiv.html("<span class='alert alert-success'>Nazwa kategorii została zmieniona!</span>").show();
+                    }
+
+                    setTimeout(function () {
+                        ajaxdiv.fadeOut("fast", function () {
+                            ajaxdiv.html("");
+                        });
+                    }, 2000);
+                }).done(function () {
+                    $this.attr("readonly", true);
+                });
+            });
+            ///////////////////////////////////////////////////////
+        });
 
     </script>
     }
